tests/errors/type_loop.tau
func main() -> int{
    y: int = y;
    return y;
}