tests/errors/type_loop.err
resolver error: resolution cycle
 ==> ./tests/errors/type_loop.tau:2:5
2 |    y: int = y;
  |    ^ type definition depends on itself
  |             ^ loop detected
